--- a/App/src/app.html
+++ b/App/src/app.html
@@ -2,7 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta name=' viewport ' content='width=device-width user-scalable=no initial-scale=1.0 maximum=1.0 minimum-scale=1.0 '>
+		<meta
+			name=" viewport "
+			content="width=device-width user-scalable=no initial-scale=1.0 maximum=1.0 minimum-scale=1.0 "
+		/>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
